--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*!
- * Project_Name: Creativo
- * Author: Themezy
- * Email: support@themezy.com
- * Url: http://themezy.com
+ * Project_Name: HTM Industries
+ * Author: Hope TM
+ * Email: tebo.hope99@outlook.com
+ * Url: http://HTM.com
  */
 /*=========================================== 
  * Importing CSS Libraries
